homepage updates, 404, about page, etc

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 {% extends "templates/_base.html" %}
 
-{% block bodyattrs %}class="{{ init_view }} about not-nested"{% endblock bodyattrs %}
+{% block bodyattrs %}class="{{ init_view }} about not-found not-nested"{% endblock bodyattrs %}
 
 {% block library_css %}
 {{ super() }}
@@ -16,8 +16,8 @@
       <div id="results-wrapper">
         <div class="about-wrapper-inner">
           <div class="about-content">
-            <h1>About 'Settling for misconduct'</h1>
-            <p>Content goes here</p>
+            <h1>Page not found</h1>
+            <!-- <p>Content goes here</p> -->
           </div>
         </div>
       </div> <!--end: results wrapper-->
