--- a/_nav.html
+++ b/_nav.html
@@ -3,7 +3,11 @@
     <div id="cpd-logo">
       <a href="http://chicagoreporter.com/"></a>
     </div>
-    <a href="{{ site_path}}" class="cpd-title">Settling for too much</a>
+    <a href="{{ site_path}}" class="cpd-title">Settling for Misconduct</a>
+    <div id="intro-controls">
+      <div id="skip-intro">skip intro</div>
+      <div id="replay-intro">play intro</div>
+    </div>
 
     <nav id="main-menu">
       <div class="menu-toggle-wrap">
@@ -25,7 +29,3 @@
 </div>
 
 
-<div id="intro-controls">
-  <div id="skip-intro">skip intro</div>
-  <div id="replay-intro">play intro</div>
-</div>
