--- a/index.html
+++ b/index.html
@@ -15,172 +15,171 @@
 
 
 	<section id="slide-intro" class="slide">
-		<div class="img fixed">
-			<div class="overlay"></div>
-		</div>
-		
-		<div class="trigger" id="trigger-top"></div><div class="trigger" id="trigger-intro"></div>
-		<div id="desc">
-			<h1>
-				<span class="settling">Settling</span>
-				<span class="for">for</span>
-				<span class="toomuch redtext">too&nbsp;much</span>
-				<span class="subhead">Police misconduct lawsuits in Chicago<span class="scroll">scroll to continue</span></span>
-			</h1>
-			
+		<div class="block">
+				<div class="img fixed">
+					<div class="overlay"></div>
+				</div>
+				
+				<div class="trigger" id="trigger-top"></div><div class="trigger" id="trigger-intro"></div>
+				<div id="titles">
+					<h1><span>Settling</span><span class="for">for</span><span>Misconduct</span></h1>
+					<h2><span>Police Lawsuits in Chicago</span></h2>
+					<p class="scroll">scroll to continue</p>
+				</div>
 		</div>
 	</section>
-	<section id="slide-1" class="slide">
-		<div class="trigger" id="trigger-1"></div>	
-		<div class="spacer s1"></div>				
-		<div class="block"></div>
+
+	<div class="trigger" id="trigger-1"></div>	
+	<section id="slide-1" class="slide">			
 		
 	</section>
 
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1 half"></div>
-
+	<div class="trigger" id="trigger-2"></div>
 	<section id="slide-2" class="slide">
-		<div class="spacer vh1"></div>
-		<div class="trigger" id="trigger-2"></div>
-		<div class="block"></div>
 	</section>
 	
-	<div class="spacer vh1"></div>
-	<div class="trigger" id="trigger-bg1"></div>
-	<div class="spacer vh1"></div>
+	<!-- <div class="spacer vh1"></div>
+	<div class="trigger" id="trigger-bg1"></div> -->
 	<div class="trigger" id="trigger-bg2"></div>
+	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
 	<div class="trigger" id="trigger-bg3"></div>
 
-	<div id="bg-1" class="bgimg"></div>
+	<!-- <div id="bg-1" class="bgimg"></div> -->
 	<div id="bg-2" class="bgimg"></div>
 	<div id="bg-3" class="bgimg"></div>
-	
+
 	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
-	
-	<section id="slide-3" class="slide">
-		<div class="trigger" id="trigger-3"></div>
-		<div class="block"></div>
+
+	<div class="trigger" id="trigger-3"></div>
+	<section id="slide-3" class="slide">	
 	</section>
 
 	<div class="spacer vh1 half"></div>
 	
 	<div class="trigger" id="trigger-bg4"></div>
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
-	<div class="trigger" id="trigger-bg5"></div>
+	<div class="spacer vh1 half"></div>
 
 	<!-- <div id="bg-5" class="bgimg"></div> -->
 	<div id="bg-4" class="bgimg"></div>	
 	
-	<section id="slide-4" class="slide">
-		<div class="trigger" id="trigger-4"></div>
-		<div class="block"></div>
+	<div class="trigger" id="trigger-4"></div>
+	<section id="slide-4" class="slide">		
 	</section>
 
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1 half"></div>
 	
+	<div class="trigger" id="trigger-5"></div>
 	<section id="slide-5" class="slide">
-		<div class="trigger" id="trigger-5"></div>
-		<div class="block"></div>
 	</section>
-
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1 half"></div>
 	
+	<div class="trigger" id="trigger-6"></div>
 	<section id="slide-6" class="slide">
-		<div class="trigger" id="trigger-6"></div>
-		<div class="block"></div>
+	</section>
+	
+	
+	
+	<div class="trigger" id="trigger-bg8"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div class="trigger" id="trigger-bg10"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+	<div class="trigger" id="trigger-bg9"></div>
+
+	<div id="bg-10" class="bgimg"></div>
+	<div id="bg-9" class="bgimg"></div>
+	<div id="bg-8" class="bgimg"></div>
+	<div class="spacer vh1"></div>
+	
+	<div class="trigger" id="trigger-7"></div>
+	<section id="slide-7" class="slide">
 	</section>
 
 
+	<div class="trigger" id="trigger-bg11"></div>
+	<div id="bg-11" class="bgimg"></div>
 	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
+
+	<div class="trigger" id="trigger-8"></div>
+	<section id="slide-8" class="slide">
+	</section>
 	
+	
+
+
+	<div class="spacer vh1"></div>
+	<div class="trigger" id="trigger-9"></div>	
+	<section id="slide-9" class="slide">
+	</section>
+	
+
 	<div class="trigger" id="trigger-bg6"></div>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
 	<div class="trigger" id="trigger-bg7"></div>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
-	<div class="trigger" id="trigger-bg8"></div>
+	<div class="trigger" id="trigger-bg19"></div>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
-	<div class="trigger" id="trigger-bg9"></div>
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
-	<div class="trigger" id="trigger-bg10"></div>
 
-	<div id="bg-10" class="bgimg"></div>
-	<div id="bg-9" class="bgimg"></div>
-	<div id="bg-8" class="bgimg"></div>
+
+	<div id="bg-19" class="bgimg"></div>
 	<div id="bg-7" class="bgimg"></div>
 	<div id="bg-6" class="bgimg"></div>
 	
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
-	
-	<section id="slide-7" class="slide">
-		<div class="trigger" id="trigger-7"></div>
-		<div class="block"></div>
-	</section>
-	
-	
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
-
-	<div class="trigger" id="trigger-bg11"></div>
-
-	<div id="bg-11-overlay"></div>
-	<div id="bg-11" class="bgimg"></div>
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1 half"></div>
-	
-	<section id="slide-8" class="slide">
-		<div class="trigger" id="trigger-8"></div>
-		<div class="block"></div>
-	</section>
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
-	
-	
-	
-	<section id="slide-9" class="slide">
-		<div class="trigger" id="trigger-9"></div>
-		<div class="block"></div>
-	</section>
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
-
-	
+	<div class="trigger" id="trigger-bg14"></div>
+	<div class="trigger" id="trigger-10"></div>
 	<section id="slide-10" class="slide">
-		<div class="trigger" id="trigger-10"></div>
-		<div class="block"></div>
 	</section>
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
+	
+	<div class="trigger" id="trigger-11"></div>
+	<section id="slide-11" class="slide">
+	</section>
+
+	<div class="trigger" id="trigger-bg15"></div>
+	<div id="bg-14" class="bgimg"></div>
+	<div id="bg-15" class="bgimg"></div>
+
+	<div class="trigger" id="trigger-bg16"></div>
+	<div id="bg-16" class="bgimg"></div>
+
+
+	<div class="trigger" id="trigger-12"></div>
+	<section id="slide-12" class="slide">
+	</section>
 
 	
-	<section id="slide-11" class="slide">
-		<div class="trigger" id="trigger-11"></div>
-		<div class="block"></div>
+
+	
+	
+
+	
+
+	<div class="trigger" id="trigger-bg18"></div>
+	<div id="bg-18" class="bgimg"></div>
+
+	<div class="trigger" id="trigger-13"></div>
+	<section id="slide-13" class="slide">
 	</section>
+
+
+	<div class="trigger" id="trigger-slast"></div>
+	<div id="bg-slast" class="bgimg"></div>
+
+
+	<div class="trigger" id="trigger-last"></div>
+	<div id="bg-last" class="bgimg"></div>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
 	
 </div>
 
-<div id="bg-12" class="bgimg"></div>
+<div id="bg-final" class="bgimg"></div>
 
 <div id="app-wrapper">
 	
