--- a/about.html
+++ b/about.html
@@ -16,8 +16,53 @@
       <div id="results-wrapper">
         <div class="about-wrapper-inner">
           <div class="about-content">
-            <h1>About 'Settling for misconduct'</h1>
-            <p>Content goes here</p>
+            <h1>Police Misconduct Lawsuit Database Project</h1>
+<h2>Credits and Methodology</h2>
+
+<h3>Disclaimer</h3>
+<p>This database aims to summarize the complaint, the Chicago police officers named, and the settlement/judgment amount, and does not purport to summarize the entire legal proceeding. Information in this database is based on civil complaints filed against police officers and/or the city of Chicago, other federal and state court records, and City of Chicago records. Complaints are legal documents that set out the plaintiff’s perception of facts and are not necessarily a full or accurate account of the events. A settlement or judgment in a case is not an indication that every allegation made in the complaint is true. In fact, the city and police officers typically deny many or all of the allegations, and the court may dismiss some “causes of action,” or alleged violations of the law, before settlement. This database reflects the causes of action in the complaint and makes no representation as to what causes of action remained in each case at the time of settlement. In addition, the database includes only defendants who were Chicago Police Department personnel and makes no representation as to additional defendants who may have been named in the case. The Chicago Reporter is not responsible for inaccuracies caused by errors in the underlying data obtained from official sources.</p>
+
+
+<h3>Methodology</h3>
+<p><strong>Universe of cases:</strong> <br />We compiled police misconduct lawsuits from the list of Judgment and Settlement Payment Requests published online by the City of Chicago’s Law Department. We began with cases marked “Police” that were sent to the comptroller for payment on or after Jan. 1, 2012, so some of the cases we included began well before 2012. We excluded cases related to employment discrimination or other alleged misconduct between police officers while on duty, such as sexual harassment; motor vehicle accidents; and cases where the primary cause was property damage. We also excluded cases where a jury decided against the plaintiff but, for one reason or another, the city paid some of the plaintiff’s attorneys’ fees. Cases that were excluded from our database were also excluded from our analysis and stories.</p>
+
+<p>We found some errors, such as typos in case numbers, in the Law Department data, which is marked as “unaudited”; we corrected them to the best of our ability.</p>
+
+<p>Some cases may have paid out over several years. The database only reflects amounts paid after January 1, 2012.</p>
+
+<p><strong>Officers:</strong> <br />All sworn Chicago Police Department personnel who were named in a lawsuit and were not dismissed from the lawsuit before it was terminated—or who were dismissed upon settlement—were listed. That includes the superintendent and other high-ranking police personnel. Non-CPD personnel, such as deputies from the Cook County Sheriff’s Department and attorneys in the Cook County State’s Attorney’s office were excluded. So were non-sworn police personnel, such as evidence technicians and detention aides, even if they were named as defendants. If no sworn CPD personnel were named in the lawsuit, usually because the individual officers’ names were unknown to the plaintiff at the time the suit was filed, the officers were listed as “Unnamed.”</p>
+
+<p>We matched officers named in lawsuits against a list of current and former Chicago police officers provided to The Reporter by the police department. The majority of matches were determined by a computer program we wrote for this purpose, which used criteria including name, badge number, rank, unit assignment and dates of service to find the matching officer in the department’s list. If the computer program couldn’t make a match to a single officer, a member of the research team manually checked those officers listed in the lawsuit and used documents from the civil lawsuit, other public records (such as marriage records) and civilian complaint data from the Independent Police Review Authority to determine the correct match. Whether they were established manually or algorithmically, all matches were verified by multiple members of the research team. If the officer could not be matched with certainty, the name was left as it was written in the lawsuit complaint. (These officers are labeled in gray in the database.)</p>
+
+<p>Officers’ gender, race and length of service come from the police department’s database. Active/inactive status is as of March 31, 2016.</p>
+
+<p><strong>Primary cause:</strong> <br />Most civil police misconduct complaints, whether they are filed in state court or federal court, include several causes of action. For example, a plaintiff may claim that a police officer illegally entered and searched his home, used excessive force, failed to provide medical care, and made a false arrest. Each of these is a separate “cause” under the law. Rarely does a police misconduct lawsuit include just one cause of action.</p>
+
+<p>For the database, we used the primary cause listed in the Law Department’s data, though we made some edits for consistency and clarity. For example, the Law Department occasionally lists two primary causes (i.e. False Arrest/Excessive Force). In those cases we used the first of the two.</p>
+
+<p>For our analysis, we also marked each case with all of the causes listed in it, to determine which causes appeared most often.</p>
+
+<p><strong>Location:</strong> <br />Using court records, we were able to determine a location or street address for 88 percent of the cases in the database. If a complaint alleged that misconduct occurred in multiple places, we used the first given location. If a complaint gave a block-level or intersection location, we entered the street address of the beginning of that block or intersection (i.e. 4300 block of West Monroe was entered as 4300 W. Monroe St.). For our internal analysis, we geocoded locations using a service provided by Texas A&amp;M University. The public database implements the Google Maps API to geocode and map locations.</p>
+
+<p><strong>Tags:</strong> <br />Fact checkers read through every lawsuit complaint and tagged them based on a number of categories:</p>
+<ul>
+  <li>Type of interaction that preceded the alleged misconduct</li>
+  <li>Characteristics of the officers (e.g. on duty, off duty, later charged with crimes related to the misconduct)</li>
+  <li>Characteristics of the plaintiff or alleged victims (e.g. minor, pregnant, gay or transgender)</li>
+  <li>Types of misconduct</li>
+  <li>Weapons used (Note: cases tagged “gun” include those where officers allegedly brandished a weapon, but didn’t fire it)</li>
+  <li>Outcome of the interaction</li>
+</ul>
+
+<h3>Credits</h3>
+<strong>Reporting:</strong> Jonah Newman<br />
+<strong>Design and production:</strong> Ryan Nagel, Adam Schweigert, Julia Smith for the Institute for Nonprofit News<br />
+<strong>Data entry and fact-checking:</strong> Daisy Contreras, Alex Fryer, Alex Hernandez<br />
+<strong>Data editing:</strong> Matt Kiefer<br />
+<strong>Copy editing:</strong> Lorraine Forte, Libby Sander<br />
+<strong>Photos:</strong> Grace Donnelly, Michelle Kanaar, Stacey Rupolo<br />
+<strong>Editing:</strong> Susan Smith Richardson<br />
+
           </div>
         </div>
       </div> <!--end: results wrapper-->
