homepage bug fix

--- a/index.html
+++ b/index.html
@@ -144,9 +144,15 @@
 	<div class="trigger" id="trigger-bg15"></div>
 	<div id="bg-14" class="bgimg"></div>
 	<div id="bg-15" class="bgimg"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+
 
 	<div class="trigger" id="trigger-bg16"></div>
 	<div id="bg-16" class="bgimg"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+
 
 
 	<div class="trigger" id="trigger-12"></div>
@@ -162,14 +168,23 @@
 
 	<div class="trigger" id="trigger-bg18"></div>
 	<div id="bg-18" class="bgimg"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+
 
 	<div class="trigger" id="trigger-13"></div>
 	<section id="slide-13" class="slide">
 	</section>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+
 
 
 	<div class="trigger" id="trigger-slast"></div>
 	<div id="bg-slast" class="bgimg"></div>
+	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
+
 
 
 	<div class="trigger" id="trigger-last"></div>
