pre-prod enhancements, grunt build

--- a/about.html
+++ b/about.html
@@ -16,15 +16,14 @@
       <div id="results-wrapper">
         <div class="about-wrapper-inner">
           <div class="about-content">
-            <h1>Police Misconduct Lawsuit Database Project</h1>
-<h2>Credits and Methodology</h2>
+            <h1>About this project</h1>
 
 <h3>Disclaimer</h3>
 <p>This database aims to summarize the complaint, the Chicago police officers named, and the settlement/judgment amount, and does not purport to summarize the entire legal proceeding. Information in this database is based on civil complaints filed against police officers and/or the city of Chicago, other federal and state court records, and City of Chicago records. Complaints are legal documents that set out the plaintiff’s perception of facts and are not necessarily a full or accurate account of the events. A settlement or judgment in a case is not an indication that every allegation made in the complaint is true. In fact, the city and police officers typically deny many or all of the allegations, and the court may dismiss some “causes of action,” or alleged violations of the law, before settlement. This database reflects the causes of action in the complaint and makes no representation as to what causes of action remained in each case at the time of settlement. In addition, the database includes only defendants who were Chicago Police Department personnel and makes no representation as to additional defendants who may have been named in the case. The Chicago Reporter is not responsible for inaccuracies caused by errors in the underlying data obtained from official sources.</p>
 
 
 <h3>Methodology</h3>
-<p><strong>Universe of cases:</strong> <br />We compiled police misconduct lawsuits from the list of Judgment and Settlement Payment Requests published online by the City of Chicago’s Law Department. We began with cases marked “Police” that were sent to the comptroller for payment on or after Jan. 1, 2012, so some of the cases we included began well before 2012. We excluded cases related to employment discrimination or other alleged misconduct between police officers while on duty, such as sexual harassment; motor vehicle accidents; and cases where the primary cause was property damage. We also excluded cases where a jury decided against the plaintiff but, for one reason or another, the city paid some of the plaintiff’s attorneys’ fees. Cases that were excluded from our database were also excluded from our analysis and stories.</p>
+<p><strong>Universe of cases:</strong> <br />We compiled police misconduct lawsuits from the list of Judgment and Settlement Payment Requests published <a href="http://www.cityofchicago.org/city/en/depts/dol.html" target="_blank">online</a> by the City of Chicago’s Law Department. We began with cases marked “Police” that were sent to the comptroller for payment on or after Jan. 1, 2012, so some of the cases we included began well before 2012. We excluded cases related to employment discrimination or other alleged misconduct between police officers while on duty, such as sexual harassment; motor vehicle accidents; and cases where the primary cause was property damage. We also excluded cases where a jury decided against the plaintiff but, for one reason or another, the city paid some of the plaintiff’s attorneys’ fees. Cases that were excluded from our database were also excluded from our analysis and stories.</p>
 
 <p>We found some errors, such as typos in case numbers, in the Law Department data, which is marked as “unaudited”; we corrected them to the best of our ability.</p>
 
@@ -56,11 +55,11 @@
 
 <h3>Credits</h3>
 <strong>Reporting:</strong> Jonah Newman<br />
-<strong>Design and production:</strong> Ryan Nagel, Adam Schweigert, Julia Smith for the Institute for Nonprofit News<br />
+<strong>Design and production:</strong> Julia Smith, Ryan Nagle, Adam Schweigert for the Institute for Nonprofit News<br />
 <strong>Data entry and fact-checking:</strong> Daisy Contreras, Alex Fryer, Alex Hernandez<br />
 <strong>Data editing:</strong> Matt Kiefer<br />
 <strong>Copy editing:</strong> Lorraine Forte, Libby Sander<br />
-<strong>Photos:</strong> Grace Donnelly, Michelle Kanaar, Stacey Rupolo<br />
+<strong>Photos:</strong> Grace Donnelly, Jonathan Gibby, Max Herman, Emily Jan, Stacey Rupolo<br />
 <strong>Editing:</strong> Susan Smith Richardson<br />
 
           </div>
