--- a/_nav.html
+++ b/_nav.html
@@ -18,9 +18,9 @@
 
       <div class="cpd-links">
         <ul>
-          <li><a href="{{ site_path }}about.html">Credits &amp; Methodology</a></li>
-          <li><a href="{{ site_path }}search/">Data</a></li>
-          <li><a href="http://chicagoreporter.com">Stories</a></li>
+          <li><a href="{{ site_path }}about.html" tabindex=0>Credits &amp; Methodology</a></li>
+          <li><a href="{{ site_path }}search/" tabindex=0>Data</a></li>
+          <li><a href="http://chicagoreporter.com/series/settling-for-misconduct/" tabindex=0>Stories</a></li>
         </ul>
       </div>
     </nav>
