--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
 	<div class="trigger" id="trigger-bg6"></div>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
+	<div class="spacer vh1"></div>
 	<div class="trigger" id="trigger-bg7"></div>
+	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
 	<div class="trigger" id="trigger-bg19"></div>
@@ -131,17 +133,20 @@
 	<div class="trigger" id="trigger-10"></div>
 	<section id="slide-10" class="slide">
 	</section>
-	
-	<div class="trigger" id="trigger-11"></div>
-	<section id="slide-11" class="slide">	
-	</section>
+	<div class="spacer vh1 half"></div>
 
 	<div class="trigger" id="trigger-bg14"></div>
 	<div id="bg-14" class="bgimg"></div>
 	
 	<div class="spacer vh1"></div>
+	
+	<div class="trigger" id="trigger-11"></div>
+	<section id="slide-11" class="slide">	
+	</section>
+	
+	<div class="trigger" id="trigger-bg18"></div>
+	<div id="bg-18" class="bgimg"></div>
 	<div class="spacer vh1"></div>
-
 
 	<!-- <div class="trigger" id="trigger-bg15"></div>
 	<div id="bg-15" class="bgimg"></div>
@@ -167,23 +172,17 @@
 
 	
 
-	<div class="trigger" id="trigger-bg18"></div>
-	<div id="bg-18" class="bgimg"></div>
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
+	
 
 
 	<div class="trigger" id="trigger-13"></div>
 	<section id="slide-13" class="slide">
 	</section>
-	<div class="spacer vh1"></div>
-	<div class="spacer vh1"></div>
 
 
 
 	<div class="trigger" id="trigger-slast"></div>
 	<div id="bg-slast" class="bgimg"></div>
-	<div class="spacer vh1"></div>
 	<div class="spacer vh1"></div>
 
 
