about text update

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
 <p>For our analysis, we also marked each case with all of the causes listed in it, to determine which causes appeared most often.</p>
 
-<p><strong>Location:</strong> <br />Using court records, we were able to determine a location or street address for 88 percent of the cases in the database. If a complaint alleged that misconduct occurred in multiple places, we used the first given location. If a complaint gave a block-level or intersection location, we entered the street address of the beginning of that block or intersection (e.g. 4300 block of West Monroe was entered as 4300 W. Monroe St.). For our internal analysis, we geocoded locations using a service provided by <a href="https://geoservices.tamu.edu/">Texas A&amp;M University</a>. The public database implements the Google Maps API to geocode and map locations.</p>
+<p><strong>Location:</strong> <br />Using court records, we were able to determine a location or street address for 84 percent of the cases in the database. If a complaint alleged that misconduct occurred in multiple places, we used the first given location. We report incident locations by block, i.e. address numbers are rounded down at the hundreds level. For our internal analysis, we geocoded locations using a service provided by <a href="https://geoservices.tamu.edu/">Texas A&amp;M University</a>. The public database implements the Google Maps API to geocode and map locations.</p>
 
 <p><strong>Tags:</strong> <br />Fact checkers read through every lawsuit complaint and tagged them based on a number of categories:</p>
 <ul>
